--- a/index.html
+++ b/index.html
@@ -6,4 +6,9 @@
     color: #F7F451; /* Цвет текста */
    }
   </style>	
+
+<p style="text-align: center;"><img src="https://i.ibb.co/bRC8S8h/image.png" width="500" height="185" alt="" /></p>
+
+
+
 </html>
